# ockam

implementations/c/: CMakeLists.txt  build.gradle
implementations/c/cmake/: ockam_cc_alwayslink.cmake  ockam_cc_library.cmake  ockam_cc_test.cmake
implementations/c/include/ockam/: transport.h  vault.h
implementations/c/lib/codec/: CMakeLists.txt  a.out  codec_local.h  payload.c  payload_aead_aes_gcm.c  public_key.c  variable_length_encoded_u2le.c
implementations/c/lib/codec/tests/: CMakeLists.txt  codec.c  codec_tests.h  payload_aead_aes_gcm_test.c  payload_test.c  public_key_test.c
implementations/c/lib/key_agreement/tests/xx/: CMakeLists.txt  xx_test.c  xx_test_initiator.c  xx_test_integration.c  xx_test_responder.c
implementations/c/lib/key_agreement/xx/: xx_common.c  xx_local.h
implementations/c/lib/transport/posix_socket/tcp/: posix_tcp.c  (+1 more)
implementations/c/lib/vault/: CMakeLists.txt  vault.c
implementations/c/lib/vault/atecc508a/: CMakeLists.txt
implementations/c/lib/vault/atecc508a/tests/: CMakeLists.txt
implementations/c/lib/vault/atecc608a/: CMakeLists.txt
implementations/c/lib/vault/atecc608a/tests/: CMakeLists.txt
implementations/c/lib/vault/default/: default.c
implementations/c/lib/vault/default/tests/: CMakeLists.txt
implementations/c/lib/vault/tests/: CMakeLists.txt  test_vault.c
implementations/c/lib/vault/tests_suite/: CMakeLists.txt
implementations/elixir/lib/transport/tcp/: connection.ex
implementations/elixir/test/integration/: handshake_test.exs
implementations/elixir/test/router/protocol/: encoding_test.exs
(+14 files in other folders)
